@@ -5,6 +5,7 @@
 	* Take into account line length (since line breaks now is dynamic) when calculating history limit
 	* Unmark parentheses when automatically selecting whole expression
 	* Only use bold parentheses highlighting if text width does not change
+	* Continuous delete when long-pressing DEL button
 
 2019-05-14 Hanna Knutsson <hanna.knutsson@protonmail.com>
 
